option optimize_for = LITE_RUNTIME;

import "ProtoGameData.proto";

package Protocol;

// 对应GameCmd

//-------------------------
// 角色选择逻辑操作号
enum SceneOpCode {
	OP_SCENE_CREATE_CHAR = 1;		// 通知创建角色
	OP_SCENE_REMOVE_CHAR = 2;		// 通知移除角色
	OP_SCENE_CHAR_MOVE = 3;			// 角色走路
	OP_SCENE_CHAR_STOP_MOVE = 4;	// 角色停止走路
	
	OP_SCENE_CREATE_MONSTER = 10;	// 通知创建怪物
	OP_SCENE_REMOVE_MONSTER = 11;	// 通知移除怪物
	OP_SCENE_MONSTER_MOVE = 12;		// 怪物走路
	OP_SCENE_MONSTER_STOP_MOVE = 13;// 怪物停止走路

	OP_SCENE_CREATE_NPC = 20;		// 通知创建NPC
	OP_SCENE_REMOVE_NPC = 21;		// 通知移除NPC
	OP_SCENE_NPC_MOVE = 22;			// NPC走路
	OP_SCENE_NPC_STOP_MOVE = 23;	// NPC停止走路

	OP_MONSTER_DEAD = 30;			// 怪物死亡
	OP_MONSTER_DISAPPEAR = 31;		// 怪物尸体消失
	OP_MONSTER_REVIVE = 32;			// 怪物复活

	OP_CHAR_DEAD = 40;				// 玩家死亡
	OP_CHAR_DISAPPEAR = 41;			// 玩家尸体消失
	OP_CHAR_REVIVE = 42;			// 玩家请求复活
	OP_CHAR_LEVELUP = 43;			// 玩家升级

	OP_CREATE_JUMP_POINT = 50;		// 通知创建跳转点
	OP_CHAR_CHANGE_MAP = 51;		// 玩家跳转地图

	OP_SCENE_UPDATE_CHAR_PROPERTY = 60;		// 更新角色的属性
	OP_SCENE_UPDATE_MONSTER_PROPERTY = 61;	// 更新怪物的属性

	OP_GET_BIGMAP_INFO = 62;		// 获得大地图需要用到的怪物，npc，传送点信息

	OP_SCENE_GET_GOHOME_MONEY = 63;	// 请求回城的费用
	OP_SCENE_GO_HOME = 64;			// 请求回城

	OP_DUPLICATE_VOTE = 65;			// 请求投票进入副本
	OP_DUPLICATE_VOTE_RESULT = 66;	// 投票结果
	OP_DUPLICATE_EXIT = 67;			// 请求退出副本

	OP_CROSSMAP_PATH = 68;			// 请求跨地图寻路
}


// 通知客户端批量创建角色
message NotifyCreateChar {
	repeated MapCharInfo char_list = 1;	// 角色信息列表
}

// 通知客户端批量移除角色
message NotifyRemoveChar {
	repeated int32 id_list = 1;	// 角色唯一id
}

// 开始走路 c -> s, s -> c
message MsgCharMove {
	optional int32 id = 1;	// 角色唯一id
	optional int32 x = 2;	// x坐标
	optional int32 y = 3;	// y坐标
	optional int32 speed = 4;	// 移动速度
	optional int32 flag = 5;	// 移动类型(0 - 不广播，1 - 广播)
	optional int32 direction = 6;	// 移动方向
}

// 走路停止
message MsgCharStopMove {
	optional int32 id = 1;	// 角色唯一id
	optional int32 x = 2;	// x坐标
	optional int32 y = 3;	// y坐标
}

// 通知客户端批量创建怪物
message NotifyCreateMonster {
	repeated MapMonsterInfo mon_list = 1;	// 怪物信息列表
}

// 通知客户端批量移除怪物
message NotifyRemoveMonster {
	repeated int32 id_list = 1;	// 角色唯一id
}

// 怪物开始走路
message NotifyMonsterMove {
	optional int32 id = 1;	// 唯一id
	optional int32 x = 2;	// x坐标
	optional int32 y = 3;	// y坐标
}

// 怪物结束走路
message NotifyMonsterStopMove {
	optional int32 id = 1;	// 唯一id
	optional int32 x = 2;	// x坐标
	optional int32 y = 3;	// y坐标
}


// 通知客户端批量创建NPC
message NotifyCreateNpc {
	repeated MapNpcInfo npc_list = 1;	// npc信息列表
}

// 通知客户端批量移除NPC
message NotifyRemoveNpc {
	repeated int32 id_list = 1;	// npc唯一id
}

// npc开始走路
message NotifyNpcMove {
	optional int32 id = 1;	// 唯一id
	optional int32 x = 2;	// x坐标
	optional int32 y = 3;	// y坐标
}

// npc结束走路
message NotifyNpcStopMove {
	optional int32 id = 1;	// 唯一id
	optional int32 x = 2;	// x坐标
	optional int32 y = 3;	// y坐标
}


// 怪物死亡
message NotifyMonsterDead {
	optional int32 id = 1;				// 目标id
	optional int32 exp = 2;				// 获得的经验值
	optional int32 attacker_id = 3;		// 攻击者id
}

// 怪物尸体消失
message NotifyMonsterDisappear {
	optional int32 id = 1;			// 目标id
}

// 怪物复活
message NotifyMonsterRevive {
	optional MapMonsterInfo moninfo = 1;		// 怪物信息
}


// 角色死亡
message NotifyCharDead {
	optional int32 id = 1;				// 目标id
	optional int32 exp = 2;				// 获得的经验值
	optional int32 attacker_id = 3;		// 攻击者id
}

// 玩家尸体消失
message NotifyCharDisappear {
	optional int32 id = 1;			// 目标id
}

// 复活类型
enum ReviveType {
	REVIVE_HOME = 0;	// 回城复活
	REVIVE_LOCAL = 1;	// 原地复活(需要扣除元宝)
}

// 玩家请求复活
message RequestCharRevive {
	optional ReviveType revive_type = 1;		// 复活类型
}

// 玩家复活通知
message NotifyCharRevive {
	optional MapCharInfo charinfo = 1;		// 玩家信息
}

// 通知玩家升级
message NotifyCharLevel {
	optional int32 charid = 1;		// 玩家编号
	optional int32 charlevel = 2;	// 玩家等级
}

// 跳转点
message JumpPoint {
	optional int32 map_x = 1;			// 地图x坐标(像素)
	optional int32 map_y = 2;			// 地图y坐标(像素) 
	optional int32 target_mapid = 3;	// 目标地图id
}

// 通知玩家创建跳转点
message NotifyCreateJumpPoint {
	repeated JumpPoint point_list = 1;	// 跳转点
}

// 通知玩家跳转地图
message NotifyCharChangeMap {
	optional int32 map_id = 1;	// 地图编号
	optional int32 map_x = 2;	// 地图x坐标(像素)
	optional int32 map_y = 3;	// 地图y坐标(像素)
}

// 通知更新其他玩家的信息
message NotifySceneUpdateCharProperty {
	optional int32 id = 1;		// 角色id
	optional int32 level = 2;	// 角色等级
	optional int32 curhp = 3;
	optional int32 maxhp = 4;
	optional int32 move_speed = 5;
	optional bool has_looks = 6;// 是否有外观更新
	repeated int32 looks = 7;	// 外观数组
}

// 通知更新怪物的信息
message NotifySceneUpdateMonsterProperty {
	optional int32 id = 1;		// 怪物id
	optional int32 curhp = 2;
	optional int32 maxhp = 3;
	optional int32 move_speed = 4;
}



// 大地图需要用到的信息结构
message BigMapNpcInfo {
	optional int32 id = 1;
	optional int32 x = 2;
	optional int32 y = 3;
	optional int32 npcid = 4;	// 表格中的id
	optional int32 func = 5;	// 功能编号
}

message BigMapMonsterInfo {
	optional int32 x = 1;
	optional int32 y = 2;
	optional int32 monid = 3;	// 表格中的id
}

message BigMapJumpPointInfo {
	optional int32 x = 1;		// 地图x坐标(像素)
	optional int32 y = 2;		// 地图y坐标(像素) 
	optional int32 map_id = 3;	// 目标地图编号
}

message RequestGetBigMapInfo {
	optional int32 map_id = 1;		// 地图编号
}

message ResponseGetBigMapInfo {
	repeated BigMapNpcInfo npc_list = 1;
	repeated BigMapMonsterInfo monster_list = 2;
	repeated BigMapJumpPointInfo jumppoint_list = 3;
}


// 请求回城的费用
message RequestGetGoHomeMoney {
	optional int32 reserve = 1;
}
message ResponseGetGoHomeMoney {
	optional int32 money = 1;
}

// 请求回城
message RequestGoHome {
	optional int32 reserve = 1;
}

// 通知其他成员，准备投票
message NotifyDuplicateVote {
	optional int32 map_id = 1;		// 地图编号
	optional string charname = 2;	// 发起人名字
}

// 成员投票结果
message RequestDuplicateVoteResult {
	optional bool agree = 1;
}

// 请求离开副本
message RequestDuplicateExit {
	optional int32 reserve = 1;
}


// 请求跨地图寻路
message RequestCrossMapPath {
	optional int32 object_type = 1;
	optional int32 id = 2;
}

message ResponseCrossMapPath {
	message PathNode
	{
		optional int32 x = 1;
		optional int32 y = 2;
	}

	optional int32 object_type = 1;
	optional int32 id = 2;
	repeated PathNode path_node = 3;
}